--- a/LAVSHYAK.Extensions.DependencyInjection.ApplicationInitializers.csproj
+++ b/LAVSHYAK.Extensions.DependencyInjection.ApplicationInitializers.csproj
@@ -4,6 +4,8 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <AssemblyName>Lavshyak.Extensions.DependencyInjection.ApplicationInitializers</AssemblyName>
+        <RootNamespace>Lavshyak.Extensions.DependencyInjection.ApplicationInitializers</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
