--- a/src/Lavshyak.Extensions.DependencyInjection.ApplicationInitializers/Lavshyak.Extensions.DependencyInjection.ApplicationInitializers.csproj
+++ b/src/Lavshyak.Extensions.DependencyInjection.ApplicationInitializers/Lavshyak.Extensions.DependencyInjection.ApplicationInitializers.csproj
@@ -12,12 +12,14 @@
         <RepositoryUrl>https://github.com/Lavshyak/Extensions.DependencyInjection.ApplicationInitializers</RepositoryUrl>
         <RepositoryType>Git</RepositoryType>
         <AssemblyOriginatorKeyFile>Lavshyak.Extensions.DependencyInjection.ApplicationInitializers.snk</AssemblyOriginatorKeyFile>
-        <license>MIT</license>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <PackageLicenseFile>LICENSE</PackageLicenseFile>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1"/>
+        <None Include="..\..\LICENSE" Pack="true" PackagePath=""/>
     </ItemGroup>
 
 </Project>
