--- a/src/Lavshyak.Extensions.DependencyInjection.ApplicationInitializers/Lavshyak.Extensions.DependencyInjection.ApplicationInitializers.csproj
+++ b/src/Lavshyak.Extensions.DependencyInjection.ApplicationInitializers/Lavshyak.Extensions.DependencyInjection.ApplicationInitializers.csproj
@@ -14,11 +14,15 @@
         <AssemblyOriginatorKeyFile>Lavshyak.Extensions.DependencyInjection.ApplicationInitializers.snk</AssemblyOriginatorKeyFile>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
+        <Version>8.0.0</Version>
+        <Title>Lavshyak.Extensions.DependencyInjection.ApplicationInitializers</Title>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1"/>
         <None Include="..\..\LICENSE" Pack="true" PackagePath=""/>
+        <None Include="..\..\README.md" Pack="true" PackagePath=""/>
     </ItemGroup>
 
 </Project>
